# AMQP-CPP

./: CMakeLists.txt
include/: CMakeLists.txt  array.h  callbacks.h  channelimpl.h  decimalfield.h  table.h
include/amqpcpp/: connection.h
src/: CMakeLists.txt  basicdeliverframe.h  basicheaderframe.h  bodyframe.h  deferredconsumerbase.cpp  extframe.h  headerframe.h  heartbeatframe.h  includes.h  passthroughbuffer.h
